public/less/_saved-jobs.less
/* BEGIN FAVORITE BADGE */
.link {
  &__saved-jobs {
    display: inline-block;
    vertical-align: middle;

    &:before {
      color: #ecba45;
      font-family: "FontAwesome";
      font-size: 2rem;
      content: "\f005";
      padding-right: 5px;
    }

    &:hover {
      text-decoration: none;
    }

    &.empty {
      display: none;
    }

    .badge {
      background-color: @g24-blue;
      border: 1px solid white;
      border-radius: 50%;
      font-size: 10px;
      margin: -25px 0 0 -15px;
      padding: 3px 5px;
    }
  }
}
/* END FAVORITE BADGE */

/* END FAVORITE BUTTON */
.btn {
  &__job-favorite {
    padding: 4px 10px;

    &:before {
      font-family: "FontAwesome";
      font-size: 1.5rem;
      font-weight: normal;
      content: "\f006";
      padding-right: 5px;
    }

    &.saved {
      &:before {
        color: @g24-grey-blue;
        font-family: "FontAwesome";
        font-size: 1.5rem;
        content: "\f005";
        padding-right: 5px;
      }
    }
  }
}
/* END FAVORITE BUTTON */

/* BEGIN CAROUSEL FAVORITES */
/* END BEGIN CAROUSEL FAVORITES*/
#recommended-jobs {
  .recommended-box {
    .recommended-box-actions {
      button {
        &.saved {
          &:before {
            color: @g24-grey-blue;
            font-family: "FontAwesome";
            font-size: 2rem;
            content: "\f005";
            padding-right: 5px;
            
          }
        }
      }
    }
  }
}

/* BEGIN LIST FAVORITES */
.box {
  &__job {
    background-color: #fff;
    border: 1px solid #ccc;
    margin-top: 10px;
    padding: 0 15px 15px;

    &.expired {
      background-color: @g24-light-grey;
      border: 1px solid @g24-grey-blue;
    }

    .header,
    .content {
      align-items: flex-end;
      display: flex;
      flex-direction: row;
      justify-content: space-between;

      .wrapper__logo {
        height: 100px;
        width: 100px;

        img {
          width: 100%;
        }
      }
    }

    .footer {
      margin: 15px 0;
    }

    .header {
      align-items: baseline;

      h2 a {
        color: @g24-blue;
      }

      .close-link {
        border: 1px solid gray;
        border-radius: 50%;
        padding: 2px 8px;
        font-weight: bold;
        color: gray;
      }
    }

    .button-job-apply {
      a,
      span {
        border-radius: 4px;
        -webkit-border-radius: 4px;
        -moz-border-radius: 4px;
        padding: 6px 25px;
      }

      a {
        background-color: @g24-red;
        border-color: @g24-red;
      }

      span {
        background-color: #ccc;
        border-color: #ccc;
      }
    }
  }

  &__job-favorite {
 

    .h3 {
      font-size: 16px;
    }
  }

  &__job-short-info {
    align-items: center;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    margin: 10px 0;

    ul {
      padding-left: 0;
      margin:0;

      li {
        font-size: 14px!important;
        margin-bottom:3px;
        line-height: 2.5rem;
        list-style: none;
        &:before {
          color: #B9B9B9;
        }
      }

      li.location {
        &:before {
          font-family: "FontAwesome";
          font-size: 1.8rem;
          content: "\f041";
          padding-right: 5px;
        }
      }

      li.company {
        a {
          color: @g24-blue;
        }

        &:before {
          font-family: "FontAwesome";
          content: "\f0f7";
          padding-right: 5px;
        }
      }

      li.type {
        &:before {
          font-family: "FontAwesome";
          content: "\f017";
          padding-right: 5px;
        }
      }

      li.date {
        &:before {
          font-family: "FontAwesome";
          content: "\f073";
          padding-right: 5px;
        }
      }

      li.industries {
        &:before {
          font-family: "FontAwesome";
          content: "\f02c";
          padding-right: 5px;
        }
      }
    }

    .wrapper__right {
      text-align: center;

      .wrapper__logo {
        height: 100px;
        width: 100px;

        img {
          width: 100%;
        }
      }
    }
  }

  &__action-buttons {
    align-items: center;
    display: flex;
    justify-content: space-between;
    flex-direction: row;

    button {
      display: flex;
      align-items: center;
      padding: 5px 7px;
      border-radius: 4px;
      float:right;
      margin: 0.2em 0;

      &:before {
        font-family: "FontAwesome";
        font-size: 2rem;
        font-weight: normal;
        content: "\f006";
        padding-right: 5px;
        color: @g24-grey-blue;
      }

      &.saved {
        &:before {
          color: @g24-grey-blue;
          font-family: "FontAwesome";
          font-size: 2rem;
          content: "\f005";
          padding-right: 5px;
        }
      }
    }

    .jssocials {
      .jssocials-shares {
        .jssocials-share-whatsapp .jssocials-share-link,
        .jssocials-share-email .jssocials-share-link {
          background: #fff!important;
          border:1px solid #ccc;
          -webkit-border-radius: 4px;
          -moz-border-radius: 4px;
          border-radius: 4px;
        }
      }
    }
  }

  &__favorite-note {
    border: 1px solid #ccc;
    background-color: #fff;
    padding: 20px 0;
  }

  &__favorites {
    background-color: @g24-light-grey;
    padding: 15px;

    > p {
      display: flex;
      flex-direction: row;
      font-size: 16px;
      justify-content: space-between;
    }

    .fa-star {
      color: @g24-blue;
      font-size: 2rem;
      margin-right: .5rem;
    }

    ul {
      display: table;
      margin-bottom: 0;
      padding-left: 0;

      li {
        display: table-row;
        line-height: 25px;
        list-style: none;

        &.location {
          &:before {
            display: table-cell;
            font-family: "FontAwesome";
            font-size: 2rem;
            content: "\f041";
            padding-right: 5px;
          }
        }
        &.company {
          &:before {
            display: table-cell;
            font-family: "FontAwesome";
            font-size: 1.5rem;
            content: "\f0f7";
            padding-right: 5px;
          }
        }
        &.employmentType {
          &:before {
            display: table-cell;
            font-family: "FontAwesome";
            font-size: 1.5rem;
            content: "\f017";
            padding-right: 5px;
          }
        }
        &.date {
          &:before {
            display: table-cell;
            font-family: "FontAwesome";
            font-size: 1.5rem;
            content: "\f073";
            padding-right: 5px;
          }
        }
      }
    }
  }
}

@media(max-width: @screen-sm) {


  .box {
    &__job {
      .badge-expired,
      .button-job-apply {
        align-self: center;
        margin-top: 10px;
      }
    }

    &__job-short-info {
      .wrapper__right {
        .wrapper__logo {
          height: 80px;
          width: 80px;
        }
      }
    }

    &__favorite-note {
      line-height: 35px;
      padding: 20px 0;
    }

    &__favorites {
      > p {
        flex-direction: column;

        a {
          margin-top: 10px;
        }
      }
    }
  }
}

@media(max-width: @screen-xs) {
  .link {
    &__saved-jobs {
      &.empty {
        display: inline-block;
        vertical-align: middle;

        &:before {
          color: @g24-grey-blue;
          font-family: "FontAwesome";
          font-size: 2rem;
          content: "\f006";
          padding-right: 5px;
        }
      }
    }
  }

  .box {
    &__action-buttons {
      button {
        padding: 5px 7px;
      }
    }
  }
}
/* END LIST FAVORITES */

/* BEGIN BUTTON IN JOB SHORT INFO */
.job-short-info {
  button {

    &:before {
      font-family: "FontAwesome";
      font-size: 1.5rem;
      font-weight: normal;
      content: "\f006";
      padding-right: 5px;
      
    }

    &.saved {
      &:before {
        color: @g24-grey-blue;
        font-family: "FontAwesome";
        font-size: 1.5rem;
        content: "\f005";
        padding-right: 5px;
      }
    }
  }
}

.apply-wrapper,
.apply-button-group {
  button {

    &:before {
      font-family: "FontAwesome";
      font-size: 1.5rem;
      font-weight: normal;
      content: "\f006";
      padding-right: 0px;
    }

    &.saved {
      &:before {
        color: @g24-grey-blue;
        font-family: "FontAwesome";
        font-size: 1.5rem;
        content: "\f005";
        padding-right: 0px;
      }
    }
  }

  .favorite-button {

    &:before {
      font-family: "FontAwesome";
      font-size: 15px;
      font-weight: normal;
      content: "\f006";
      padding-right: 5px;
      color: #B9B9B9;
    }
  }

}



@media(max-width: @screen-xs) {
 
}
/* END BUTTON IN JOB SHORT INFO */

